rename files and update styles to authentication component

--- a/src/ components/sign-in-form/sign-in-form.styles.scss
+++ b/src/ components/sign-in-form/sign-in-form.styles.scss
@@ -6,12 +6,9 @@
     margin: 10px 0;
   }
 
-  .signInBtnContainer{
+  .signInBtnContainer {
     display: flex;
     justify-content: space-between;
-
-    div {
-      align-items: flex-start;
-    }
+    flex-wrap: wrap;
   }
 }
