add error handling to signin page and styling updates

--- a/src/routes/authentication/authentication.styles.scss
+++ b/src/routes/authentication/authentication.styles.scss
@@ -1,4 +1,6 @@
-.authenticationComponentsContainer {
+.authentication-container {
   display: flex;
   justify-content: space-around;
+  width: 900px;
+  margin: 30px auto;
 }
