--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -1,33 +1,27 @@
 .checkout-container {
+  width: 55%;
+  min-height: 90vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-  padding: 0 5%;
-
+  align-items: center;
+  margin: 50px auto 0;
   .checkout-header {
+    width: 100%;
+    padding: 10px 0;
     display: flex;
     justify-content: space-between;
-    gap: 70px;
-    width: 100%;
-    border-bottom: 1px solid #000;
-    h2 {
-      width: auto;
+    border-bottom: 1px solid darkgrey;
+    .header-block {
+      text-transform: capitalize;
+      width: 23%;
+      &:last-child {
+        width: 8%;
+      }
     }
   }
-
-  .checkout-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 70px;
-    width: 100%;
-    border-bottom: 1px solid #000;
-    img {
-      width: 150px;
-    }
-    span {
-      width: auto;
-    }
+  .total {
+    margin-top: 30px;
+    margin-left: auto;
+    font-size: 36px;
   }
 }
