--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -1,3 +1,8 @@
+.category-title {
+  font-size: 28px;
+  margin-bottom: 25px;
+  text-align: center;
+}
 .category-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
